Archive2/55/c74cb5f8a1b1e4/output
main.cpp: In function ‘int main()’:
main.cpp:78:13: error: ‘pc’ was not declared in this scope
             pc = &ptr[room_num].creature_array[p];
             ^
